# mrmat-hello-python

./: .gitignore  Jenkinsfile  LICENSE  README.md  _oldsetup.cfg  build.gradle  dev-requirements.txt  parse.py  py-pg-to-mongo.py  py-pictures.py  pyproject.toml  pytest.ini  qodana.yml  requirements.dev.txt  requirements.txt  settings.gradle  setup.cfg  setup.py  sonar-project.properties  test-requirements.txt
.github/workflows/: build.yml  ci.yml  codeql.yml  pr.yml  release.yml  sast.yml  version.yml
ci/: __init__.py
doc/source/: conf.py  index.rst
gradle/wrapper/: gradle-wrapper.properties
hackaton-2015/: py-cass-import.py  tweet-analyze.py
mhp/pictures/: __init__.py  picture.py  picturepg.py
mhporm/: __init__.py
mhporm/mg/: __init__.py  mgcity.py  mgcompany.py  mgoccupation.py  mgperson.py
mhporm/pg/: __init__.py  pgbloodtype.py  pgcctype.py  pgcity.py  pgcompany.py  pgcountry.py  pggender.py  pgoccupation.py  pgperson.py  pgtitle.py
mhpython/: cli.py  github.py
mhpython/boilerplate/: mrmat_boilerplate.py
mhpython/classes/: GermanGreeting.py  Greeting.py
mhpython/github/: mrmat_github.py
mhpython/hackathon_2015/: mrmat_tweet_analyze.py  py-cass-import.py
mhpython/locale/: messages.pot
mhpython/locale/de/LC_MESSAGES/: messages.po
mhpython/locale/de_CH/LC_MESSAGES/: messages.po
mhpython/locale/en/LC_MESSAGES/: messages.po
mhpython/localization/: localized.py
mhpython/localization/de_CH/LC_MESSAGES/: mhpython.localization.mo  mhpython.localization.po
mhpython/localization/en/LC_MESSAGES/: mhpython.localization.mo
mhpython/localization/locale/de/LC_MESSAGES/: mhpython.localization.mo
mhpython/localization/locale/de_CH/LC_MESSAGES/: mhpython.localization.mo  mhpython.localization.po
mhpython/microrpp/: run.py
mhpython/microrpp/adapter/osb/: __init__.py  osb_adapter.py
mhpython/microrpp/adapter/osb/model/: osb_error_response.py  osb_provision_request.py
mhpython/microrpp/adapter/rest/: rest_adapter.py
mhpython/oidc/: mrmat_oidc_api.py  mrmat_oidc_interactive.py
mhpython/orm/: __init__.py
mhpython/orm/mongo/: __init__.py  mongo_city.py  mongo_company.py  mongo_occupation.py  mongo_person.py
mhpython/orm/sqlorm/: __init__.py  sqlorm_bloodtype.py  sqlorm_cctype.py  sqlorm_city.py  sqlorm_company.py  sqlorm_country.py  sqlorm_gender.py  sqlorm_occupation.py  sqlorm_person.py  sqlorm_title.py
mhpython/pictures/: test_pictures_hashtest.py
mhpython/py_env/: mrmat_env.py  utils.py
mhpython/py_io/: mrmat_io.py  test_io.py
mhpython/py_packages/: mrmat_packages.py
mhpython/py_packages/pkg/: me.py
mhpython/py_spinner/: mrmat_spinner.py
mrmat-hello-python-executable/: __main__.py
mrmat_hello_python_namespaced/foo/: __init__.py
py-boilerplate/: py-boilerplate.py
py-class/: externalgreeting.py  py-class-external.py  py-class-inline.py  py-class-packaged.py
py-class/MyPackage/: __init__.py  packagedgreeting.py
py-env/: py-env.py
py-io/: py-io.py
py-orm/: py-orm.py
py-packages/: py-packages.py
py-packages/pkg/: __init__.py
py-packages/pkg/subpkg/: __init__.py  subme.py
py-unit/: io.py  py-pictures-hashtest.py
src/ci/: __init__.py
src/mhpython/: __init__.py
src/mhpython/async_tasks/: base.py
src/mhpython/asyncio/: app_events.py  proxy.py
src/mhpython/boilerplate/: mrmat_boilerplate.py
src/mhpython/classes/: german_greeting.py  greeting.py  mrmat_classes.py
src/mhpython/concurrency/: __init__.py  multiprocess_cli.py  processpool_cli.py  threadpool_cli.py  ui.py  workers.py
src/mhpython/ddd/: __init__.py  base.py  base_types.py  cluster.py  ddd_kaso.py  domain.py  kaso_cluster.py  kaso_node.py  model.py  node.py  repository.py
src/mhpython/ddd_base/: base_decorators.py  base_types.py  sample_person.py
src/mhpython/ddd_repositories/: base_types.py  disks.py  images.py
src/mhpython/decorators/: __init__.py  class_decorator.py
src/mhpython/executable_module/: __main__.py
src/mhpython/finance/: __init__.py  app.py  csv_parser.py  db.py  pdf_parser.py
src/mhpython/fullscreen/: cli.py
src/mhpython/functions/: __init__.py  functions.py
src/mhpython/github/: mrmat_github.py
src/mhpython/hackathon_2015/: mrmat_cass_import.py  mrmat_tweet_analyze.py
src/mhpython/indexable_classes/: __init__.py  base.py
src/mhpython/kafka/: __init__.py  consumer.py  producer.py  record.py
src/mhpython/locale/: __init__.py  messages.pot
src/mhpython/locale/de_CH/LC_MESSAGES/: messages.po
src/mhpython/localised/: __init__.py  cli.py  greeting.py
src/mhpython/localised/locale/: messages.pot
src/mhpython/localised/locale/de/LC_MESSAGES/: messages.mo  messages.po
src/mhpython/localised/locale/en/LC_MESSAGES/: messages.mo  messages.po
src/mhpython/localised/locale/fr/LC_MESSAGES/: messages.mo  messages.po
src/mhpython/microrpp/adapter/osb/: __init__.py
src/mhpython/orm/: mrmat_pg_to_mongo.py
src/mhpython/orm/mongo/: mongo_person.py
src/mhpython/orm/sqlorm/: sqlorm_gender.py
src/mhpython/pictures/: picturefile.py  picturepg.py  py-pictures.py  test_pictures_hashtest.py
src/mhpython/properties/: __init__.py  class_properties.py
src/mhpython/py_io/: mrmat_io.py  test_io.py
src/mhpython/py_packages/: mrmat_packages.py
src/mhpython/py_packages/pkg/: me.py
src/mhpython/py_packages/pkg/subpkg/: subme.py
src/mhpython/wrappers/: __init__.py  enriched_class.py  inversion.py
src/mrmat_hello_python/: __init__.py  class_decorator.py  functions.py
src/mrmat_hello_python_namespaced/bar/: greeting.py
src/mrmat_hello_python_namespaced/foo/: greeting.py
tests/: conftest.py  test_async_tasks.py  test_basic_lists.py  test_basic_sqlalchemy.py  test_builtin.py  test_class_decorator.py  test_class_properties.py  test_concurrency.py  test_ddd.py  test_ddd_base.py  test_ddd_refactor.py  test_ddd_repositories.py  test_decorators.py  test_exceptions.py  test_functions.py  test_generators.py  test_indexable_classes.py  test_localised.py  test_properties.py  test_skeleton.py  test_types.py  test_version.py  test_wrappers.py
var/: github-api-v3.paw
var/compose/kafka/: docker-compose.yml
(+1 files in other folders)
