[build-system]
requires = [
    'setuptools==75.4.0',
    'build==1.2.2',
    'wheel==0.44.0',
]
build-backend = 'setuptools.build_meta'

[project]
name = "mrmat-hello-python"
description = "Small Python projects that don't warrant their own repository"
urls = { "Sources" = "https://github.com/MrMatAP/mrmat-hello-python" }
keywords = ["experimental"]
readme = "README.md"
license = { text = "MIT" }
authors = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
maintainers = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.12"
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
version = { attr = "ci.version" }
dependencies = {file = ["requirements.txt"] }
optional-dependencies = { dev = {file = ["requirements.dev.txt"] } }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mhpython*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.mo"]

[project.scripts]
mrmat-localised = "mhpython.localised.cli:main"
mrmat-fullscreen = "mhpython.fullscreen.cli:main"
mrmat-concurrency-threadpool = "mhpython.concurrency.threadpool_cli:main"
mrmat-concurrency-processpool = "mhpython.concurrency.processpool_cli:main"
mrmat-asyncio-app-events = "mhpython.asyncio.app_events:run"
mrmat-asyncio-proxy = "mhpython.asyncio.proxy:run"

# If you are debugging your tests using PyCharm then comment out the coverage options
# in addopts
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src/mhpython --cov-report=term --cov-report=xml:build/coverage.xml --junit-xml=build/junit.xml"
testpaths = ["tests"]
junit_family = "xunit2"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format="%Y-%m-%d %H:%M:%S"
asyncio_default_fixture_loop_scope='session'
