[build-system]
requires = [
    'setuptools==80.9.0',
    'build==1.3.0',
    'wheel==0.45.1'
]
build-backend = 'setuptools.build_meta'

[project]
name = "mrmat-hello-python"
description = "Small Python projects that don't warrant their own repository"
urls = { "Sources" = "https://github.com/MrMatAP/mrmat-hello-python" }
keywords = ["experimental"]
readme = "README.md"
license = "MIT"
authors = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
maintainers = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "aiosqlite==0.21.0",
    "cryptography==45.0.7",
    "langchain-community==0.3.29",
    "langchain-ollama==0.3.8",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.11.7",
    "pypdf==6.0.0",
    "rich==14.1.0",
    "sqlalchemy[asyncio]==2.0.43",
]
[dependency-groups]
dev = [
    "babel==2.17.0",
    "build==1.3.0",
    "mypy==1.17.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.3.0",
    "setuptools==80.9.0",
    "wheel==0.45.1",
]

[tool.setuptools.dynamic]
version = { attr = "ci.version" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mhpython*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.mo"]

[project.scripts]
mrmat-localised = "mhpython.localised.cli:main"
mrmat-fullscreen = "mhpython.fullscreen.cli:main"
mrmat-concurrency-threadpool = "mhpython.concurrency.threadpool_cli:main"
mrmat-concurrency-processpool = "mhpython.concurrency.processpool_cli:main"
mrmat-asyncio-app-events = "mhpython.asyncio.app_events:run"
mrmat-asyncio-proxy = "mhpython.asyncio.proxy:run"
mrmat-finance-pdf-parser = "mhpython.finance.pdf_parser:main"
mrmat-finance-csv-parser = "mhpython.finance.csv_parser:main"

# If you are debugging your tests using PyCharm then comment out the coverage options
# in addopts
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src/mhpython --cov-report=term --cov-report=xml:build/coverage.xml --junit-xml=build/junit.xml"
testpaths = ["tests"]
junit_family = "xunit2"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format="%Y-%m-%d %H:%M:%S"
asyncio_default_fixture_loop_scope='session'

