[build-system]
requires = [
    'setuptools==80.9.0',
    'build==1.3.0',
    'wheel==0.45.1'
]
build-backend = 'setuptools.build_meta'

[project]
name = "mrmat-hello-python"
description = "Small Python projects that don't warrant their own repository"
urls = { "Sources" = "https://github.com/MrMatAP/mrmat-hello-python" }
keywords = ["experimental"]
readme = "README.md"
license = "MIT"
authors = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
maintainers = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "aiosqlite==0.21.0",
    "cryptography==46.0.3",
    "kafka-python>=2.3.0",
    "langchain==1.1.2",
    "langchain-community==0.4.1",
    "langchain-ollama>=0.3.8",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.12.5",
    "pypdf==6.6.0",
    "rich==14.2.0",
    "sqlalchemy[asyncio]>=2.0.44",
]
[dependency-groups]
dev = [
    "babel==2.17.0",
    "build==1.3.0",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "setuptools==80.9.0",
    "wheel==0.45.1",
    "ruff>=0.14.8",
]

[tool.setuptools.dynamic]
version = { attr = "ci.version" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mhpython*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.mo"]

[project.scripts]
mrmat-localised = "mhpython.localised.cli:main"
mrmat-fullscreen = "mhpython.fullscreen.cli:main"
mrmat-concurrency-threadpool = "mhpython.concurrency.threadpool_cli:main"
mrmat-concurrency-processpool = "mhpython.concurrency.processpool_cli:main"
mrmat-asyncio-app-events = "mhpython.asyncio.app_events:run"
mrmat-asyncio-proxy = "mhpython.asyncio.proxy:run"
mrmat-finance-pdf-parser = "mhpython.finance.pdf_parser:main"
mrmat-finance-csv-parser = "mhpython.finance.csv_parser:main"
mrmat-kafka-producer = "mhpython.kafka.producer:main"
mrmat-kafka-consumer = "mhpython.kafka.consumer:main"

# If you are debugging your tests using PyCharm then comment out the coverage options
# in addopts
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=mhpython --cov-branch --cov-report=term --cov-report=xml:build/coverage.xml --junit-xml=build/junit.xml"
testpaths = ["tests"]
junit_family = "xunit2"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format="%Y-%m-%d %H:%M:%S"
asyncio_default_fixture_loop_scope='session'

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "single"
