[metadata]
name = mhpython
author = Mathieu Imfeld
author-email = imfeldma@gmail.com
summary = Small Python projects that do not warrant their own repository
description-file = README.md
license = Apache-2
classifier =
        'Development Status :: 3 - Alpha',
        'Intended Audience :: End Users',
        'Topic :: Picture Catalog',
        'License :: OSI Approved :: MIT',
        'Programming Language :: Python :: 3.5'
keywords =
    utilities

[files]
packages =
  mhpython

[entry_points]
console_scripts =
    gh-webhook-manager = mhpython.github:gh_webhook_manager
    mrmat-oidc-test-api = mhpython.oidc.test_api:run
    py-boilerplate = mhpython.boilerplate:run
    py-classes = mhpython.classes:run
    py-cass-import = mhpython.hackathon_2015.py-cass-import:run
    tweet-analyze = mhpython.hackathon_2015.tweet-analyze:run

[extras]
testing =
    behave
    coverage
addopts = tests

[aliases]
docs = build_sphinx

[build_sphinx]
source-dir = doc/source
build-dir = doc/build

[bdist_wheel]
universal=0

[coverage:run]
branch = True
source = picturecatalog,picturecatalog.model

[coverage:xml]
output = build/coverage/coverage.xml

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[behave]
format=pretty
color=true
junit=true
junit_directory=build/reports/integration-tests
outfiles=build/reports/integration-tests/pretty.output
