[metadata]
name = mrmat-hello-python
version = attr: ci.version
author = Mathieu Imfeld
author_email = imfeldma+9jqerw@gmail.com
maintainer = Mathieu Imfeld
maintainer_email = imfeldma+9jqerw@gmail.com
long_description = file: README.md
license = MIT
url = https://github.com/MrMatOrg/mrmat-hello-python
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.10

[options]
packages = find:
;install_requires =
;    rich~=10.14.0

[options.packages.find]
exclude =
    ci
