[metadata]
name = mrmat-hello-python
version = attr: ci.version
author = Mathieu Imfeld
author_email = imfeldma+9jqerw@gmail.com
maintainer = Mathieu Imfeld
maintainer_email = imfeldma+9jqerw@gmail.com
long_description = file: README.md
license = MIT
url = https://github.com/MrMatOrg/mrmat-python-api-flask
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    requests~=2.18.1
    sqlalchemy
    Flask
    flask-restplus
    flask-pyoidc
    cqlengine
    psycopg2-binary
    pyspark
    mongoengine
    imagehash
    piexif

[options.entry_points]
console_scripts =
    mrmat-github = mhpython.github.mrmat_github:run,
    mrmat-oidc-interactive = mhpython.oidc.mrmat_oidc_interactive:run,
    mrmat-cass-import = mhpython.hackathon_2015.mrmat_cass_import:run,
    mrmat-tweet-analyze = mhpython.hackathon_2015.mrmat_tweet_analyze:run,
    mrmat-boilerplate = mhpython.boilerplate.mrmat_boilerplate:run,
    mrmat-localized = mhpython.localization.localized:run,
    mrmat-classes = mhpython.classes.mrmat_classes:run,
    mrmat-env = mhpython.py_env.mrmat_env:run,
    mrmat-io = mhpython.py_io.mrmat_io:run,
    mrmat-packages = mhpython.py_packages.mrmat_packages:run,
    mrmat-spinner = mhpython.py_spinner.mrmat_spinner:run,
    mrmat-pg-to-mongo = mhpython.orm.mrmat_pg_to_mongo:run

[options.packages.find]
exclude =
    ci
